# lean-mlops-framework

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
mlflow/: Dockerfile
models/iris_classifier/: inference.py  train.py
models/rule_engine/: inference.py  rules.py  setup.py
models/wine_clustering/: inference.py  train.py
services/api/: Dockerfile  main.py
services/batch_runner/: Dockerfile  alert.py  monitor.py  runner.py
tests/api/: test_main.py
tests/batch_runner/: test_alert.py  test_monitor.py
tests/iris_classifier/: test_inference.py  test_train.py
tests/rule_engine/: test_rules.py
tests/wine_clustering/: test_inference.py  test_train.py
